next study clone

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,16 @@ a {
 * {
   box-sizing: border-box;
 }
+.app {
+  margin: 10px;
+}
+
+.main {
+  min-block-size: 80vh;
+}
+
+.inner {
+  inline-size: 1100px;
+  margin: 0 auto;
+  position: relative;
+}
